# FDW

./: .gitignore  docker-compose.yml  docker-reset-lnx.bash  docker-reset.ps1  init.sql  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
dags/: allocation_simulation.py  daily_update.py  income_tax_update.py  projections.py
dags/lib/: constants.py  google_lib.py  postgresql_lib.py  utils.py
dags/queries/table_creation/: create_allocation_simulations.sql  create_balance_discrepancies.sql  create_balance_projections.sql  create_balances.sql  create_exchanges.sql  create_external_transactions.sql  create_int_apport_projections_monthly.sql  create_int_fiat_balances_daily.sql  create_int_yield_stats.sql  create_prices.sql  create_projections.sql  create_taxes_avg_price_raw.sql  create_taxes_pnl_raw.sql  create_transfers.sql
deprecated/: income_tax_update.py
documents/taxes/: irs.md
fdw_dbt/: .gitignore  .sqlfluff  .user.yml  codegen_output.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
fdw_dbt/analyses/: balance_vs_transactions.sql  test.sql
fdw_dbt/docs/: entities.md  measures.md
fdw_dbt/macros/: _macros.yml  fiat_currencies.sql  fiat_currencies_ext.sql  generate_schema_name.sql  int_yields_daily.sql  prod.sql  projection_label.sql  round_amount.sql  universal_tickers.sql
fdw_dbt/macros/env/: get_on_schema_change.sql
fdw_dbt/macros/incremental/: window_truncate_pre_hook.sql
fdw_dbt/macros/refactor/: latest_date.sql
fdw_dbt/models/: source.yml
fdw_dbt/models/1_staging/: schema.yml
(+163 files in other folders)
